- Added method for getting available time interval and tests for it
- Added ability to deselect filters in schedule assignment mode filters
- Added dynamic schedule grid creation

--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -9,7 +9,8 @@
                 <ResourceDictionary Source="View/ScheduleView.xaml" />
                 <ResourceDictionary Source="View/TimeTickerView.xaml" />
                 <ResourceDictionary Source="View/RoomView.xaml" />
-                <ResourceDictionary Source="View/ScheduledAssignmentView.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="View/ScheduledAssignmentView.xaml" />
+                <ResourceDictionary Source="View/ScheduleCellView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
