--- a/Registry/View/ScheduledAssignmentView.xaml
+++ b/Registry/View/ScheduledAssignmentView.xaml
@@ -3,9 +3,9 @@
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:registry="clr-namespace:Registry"
                     xmlns:core="clr-namespace:Core;assembly=StuffLib">
-    <DataTemplate DataType="{x:Type registry:ScheduledAssignmentDTO}">
+    <DataTemplate DataType="{x:Type registry:ScheduledAssignmentViewModel}">
         <DataTemplate.Resources>
-            <core:UniversalConverter x:Key="isCompletedToBackgroundConverter">
+            <core:UniversalConverter x:Key="IsCompletedToBackgroundConverter">
                 <core:ConverterItem>
                     <core:ConverterItem.From>
                         <system:Boolean>True</system:Boolean>
@@ -24,16 +24,16 @@
                 </core:ConverterItem>
             </core:UniversalConverter>
         </DataTemplate.Resources>
-        <Border BorderBrush="Gray" BorderThickness="0 0.5 0 0.5" Background="{Binding IsCompleted, Converter={StaticResource isCompletedToBackgroundConverter}}">
+        <Border BorderBrush="Gray" BorderThickness="0 0.5 0 0.5" Background="{Binding IsCompleted, Converter={StaticResource IsCompletedToBackgroundConverter}}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2 2 0 0" FontSize="8" Text="{Binding StartTime, StringFormat='HH:mm', Mode=OneTime}" />
-                <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName, Mode=OneTime}" />
-                <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm', Mode=OneTime}" />
+                <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2 2 0 0" FontSize="8" Text="{Binding StartTime, StringFormat='HH:mm'}" />
+                <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName}" />
+                <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm'}" />
             </Grid>
         </Border>
     </DataTemplate>
