--- a/Registry/View/ScheduleCellView.xaml
+++ b/Registry/View/ScheduleCellView.xaml
@@ -1,8 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:registry="clr-namespace:Registry">
+                    xmlns:registry="clr-namespace:Registry"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    xmlns:command="http://www.galasoft.ch/mvvmlight">
     <DataTemplate DataType="{x:Type registry:ScheduleCellViewModel}">
         <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White" BorderBrush="DarkGoldenrod" BorderThickness="1" x:Name="border" CornerRadius="2">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="PreviewMouseDown">
+                    <command:EventToCommand Command="{Binding RequestAssignmentCreationCommand, Mode=OneTime}" PassEventArgsToCommand="True"  />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
