--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -11,7 +11,29 @@
                 <ResourceDictionary Source="View/RoomView.xaml" />
                 <ResourceDictionary Source="View/ScheduledAssignmentView.xaml" />
                 <ResourceDictionary Source="View/ScheduleCellView.xaml" />
+                <ResourceDictionary Source="View/ScheduleAssignmentUpdateView.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ControlTemplate x:Key="ValidationTemplate">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <AdornedElementPlaceholder Grid.Column="0" x:Name="placeholder" />
+                    <Image Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Width="16" Height="16" Source="pack://application:,,,/Resources;component/Images/Error16x16.png"
+                           ToolTip="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" Margin="5 0 0 0" x:Name="image">
+                        <Image.Triggers>
+                            <EventTrigger RoutedEvent="Control.Loaded">
+                                <BeginStoryboard>
+                                    <Storyboard TargetName="image" TargetProperty="Opacity">
+                                        <DoubleAnimation From="0" To="1" Duration="0:0:0.4" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Image.Triggers>
+                    </Image>
+                </Grid>
+            </ControlTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
