--- a/Registry/View/ScheduledAssignmentView.xaml
+++ b/Registry/View/ScheduledAssignmentView.xaml
@@ -33,6 +33,11 @@
                 <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName}" />
                 <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm'}" />
             </Grid>
+            <Border.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Cancel" />
+                </ContextMenu>
+            </Border.ContextMenu>
         </Border>
     </DataTemplate>
 </ResourceDictionary>
