--- a/AdminTools/View/MainWindow.xaml
+++ b/AdminTools/View/MainWindow.xaml
@@ -29,6 +29,11 @@
                         <Image Width="16" Height="16" Source="pack://application:,,,/Resources;component/Images/UserGroup48x48.png" />
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="Редактор прав" Padding="0,5,5,5" Click="{ev:EventBinding PermissionsTreeCommand}">
+                    <MenuItem.Icon>
+                        <Image Width="16" Height="16" Source="pack://application:,,,/Resources;component/Images/UserGroup48x48.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
         </Menu>
 
