--- a/AdminTools/View/UserEditorView.xaml
+++ b/AdminTools/View/UserEditorView.xaml
@@ -1,16 +1,18 @@
-﻿<UserControl x:Class="AdminTools.View.UserEditorView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:admintools="clr-namespace:AdminTools.ViewModel"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
-             xmlns:core="clr-namespace:Core;assembly=StuffLib"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="457" 
-             d:DataContext="{d:DesignInstance admintools:UserEditorViewModel}">
+﻿<Window x:Class="AdminTools.View.UserEditorView"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+            xmlns:admintools="clr-namespace:AdminTools.ViewModel"
+            xmlns:system="clr-namespace:System;assembly=mscorlib"
+            xmlns:core="clr-namespace:Core;assembly=StuffLib"
+            mc:Ignorable="d" 
+            d:DesignHeight="395" d:DesignWidth="1073" 
+            d:DataContext="{d:DesignInstance admintools:UserEditorViewModel}"
+            Title="Редактор пользователей" WindowState="Maximized"
+            Icon="pack://application:,,,/Resources;component/Images/UserGroup48x48.png">
 
-    <UserControl.Resources>
+    <Window.Resources>
         <system:Boolean x:Key="True">True</system:Boolean>
         <system:Boolean x:Key="False">False</system:Boolean>
         <core:UniversalConverter x:Key="UserIsActiveConverter">
@@ -20,12 +22,23 @@
             <core:ConverterItem From="{StaticResource False}">
                 <core:ConverterItem.To>pack://application:,,,/Resources;component/Images/SwitchOff_32x32.png</core:ConverterItem.To>
             </core:ConverterItem>
-        </core:UniversalConverter>        
-    </UserControl.Resources>
-    
-    <DockPanel>        
+        </core:UniversalConverter>
+    </Window.Resources>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
         <!-- User Menu Elements AREA -->
-        <Border DockPanel.Dock="Top" BorderBrush="Gray" BorderThickness="1,0,1,1">
+        <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderBrush="Gray" BorderThickness="1,0,1,1">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="#33000000" Offset="0" />
@@ -33,7 +46,7 @@
                 </LinearGradientBrush>
             </Border.Background>
 
-            <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+            <StackPanel HorizontalAlignment="Left" Orientation="Vertical">
                 <Button Command="{Binding NewUserCommand}" Margin="5">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="pack://application:,,,/Resources;component/Icons/AddUser_48x48.ico" Stretch="Uniform" Height="24" Width="24"/>
@@ -43,15 +56,60 @@
                 <Button Command="{Binding EditUserCommand}" CommandParameter="{Binding ElementName=userList, Path=SelectedItem}" Margin="5">
                     <StackPanel Orientation="Horizontal">
                         <Image Source="pack://application:,,,/Resources;component/Icons/Edit_48x48.ico" Stretch="Uniform" Height="24" Width="24"/>
-                        <TextBlock Text="Редактировать перс. данные" Margin="5"/>
+                        <TextBlock Text="Редактировать перс. данные" Margin="5" TextWrapping="Wrap" Width="104"/>
                     </StackPanel>
                 </Button>
-                <CheckBox Margin="5,13,5,0" Content="Только активные уч. записи" IsChecked="{Binding FilterChecked, Mode=TwoWay}"/>
+                <Button Command="{Binding SynchWithActiveDirectoryCommand}" CommandParameter="{Binding ElementName=userList, Path=SelectedItem}" Margin="5">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="pack://application:,,,/Resources;component/Images/DB_refresh_24x24.png" Stretch="Uniform" Height="24" Width="24"/>
+                        <TextBlock Text="Обновить через Active Directory" Margin="5" TextWrapping="Wrap" Width="108"/>
+                    </StackPanel>
+                </Button>
+                <CheckBox Margin="5,15,5,0" IsChecked="{Binding ShowOnlyActiveUsers, Mode=TwoWay}">
+                    <StackPanel>
+                        <TextBlock Text="Только активные уч. записи" TextWrapping="Wrap" Width="122" Margin="5,-7" />
+                    </StackPanel>
+                </CheckBox>
+
+                <Popup IsOpen="{Binding ShowPopup, Mode=TwoWay}" StaysOpen="False" Placement="Mouse">
+                    <Border Background="LightYellow">
+                        <StackPanel>
+                            <TextBlock Margin="3" Text="Выберите учетную запись, доступную в Active Directory" FontStyle="Italic"/>
+                            <ListView x:Name="usersADList" ItemsSource="{Binding UsersAD}" SelectedItem="{Binding SelectedUserAD, Mode=TwoWay}">
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Пользователь" DisplayMemberBinding="{Binding Path=UserName}"></GridViewColumn>
+                                        <GridViewColumn Header="SID" DisplayMemberBinding="{Binding Path=SID}"></GridViewColumn>
+                                        <GridViewColumn Header="Логин" DisplayMemberBinding="{Binding Path=PrincipalName}"></GridViewColumn>
+                                        <GridViewColumn>
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <Image Source="{Binding Path=Enabled, Converter={StaticResource UserIsActiveConverter}}" Margin="5" Stretch="None"/>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                        <GridViewColumn>
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <Button Background="Transparent"                                                    
+                                                        Command="{Binding ElementName=usersADList, Path=DataContext.SelectUserADCommand}"
+                                                        CommandParameter="{Binding}">
+                                                        <TextBlock Text="Выбрать" />
+                                                    </Button>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </StackPanel>
+                    </Border>
+                </Popup>
             </StackPanel>
         </Border>
-        
+
         <!-- Search User AREA -->
-        <Border DockPanel.Dock="Bottom" BorderBrush="Gray" BorderThickness="1,0,1,1">
+        <Border Grid.Column="1" Grid.Row="1" BorderBrush="Gray" BorderThickness="1,0,1,1">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="#33000000" Offset="0" />
@@ -67,7 +125,7 @@
         </Border>
 
         <!-- User List -->
-        <ListView x:Name="userList" ItemsSource="{Binding Users}" SelectedItem="{Binding SelectedUser, Mode=TwoWay}">
+        <ListView Grid.Column="1" Grid.Row="0" x:Name="userList" ItemsSource="{Binding Users}" SelectedItem="{Binding SelectedUser, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
@@ -88,5 +146,61 @@
                 </GridView>
             </ListView.View>
         </ListView>
-    </DockPanel>
-</UserControl>
+
+        <ListView Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" x:Name="userPermissionsList" DockPanel.Dock="Right" ItemsSource="{Binding UserPermissions}" SelectedItem="{Binding SelectedUserPermission, Mode=TwoWay}">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn Header="Название права" DisplayMemberBinding="{Binding Path=PermissionName}"></GridViewColumn>
+                        <GridViewColumn Header="Начало">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <DatePickerTextBox Text="{Binding Path=BeginDate, StringFormat=dd-MM-yyyy}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Конец">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <DatePickerTextBox Text="{Binding Path=EndDate, StringFormat=dd-MM-yyyy}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="IsGranted" DisplayMemberBinding="{Binding Path=IsGranted}"></GridViewColumn>
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <Border Grid.Column="3" Grid.Row="0" Grid.RowSpan="2" BorderBrush="Gray" BorderThickness="1,0,1,1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#33000000" Offset="0" />
+                    <GradientStop Color="#11000000" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <StackPanel HorizontalAlignment="Left" Orientation="Vertical">
+                <Button Command="{Binding AddUserPermissionsCommand}" Margin="5">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="pack://application:,,,/Resources;component/Icons/AddUser_48x48.ico" Stretch="Uniform" Height="24" Width="24"/>
+                        <TextBlock Text="Добавить право" Margin="5"/>
+                    </StackPanel>
+                </Button>
+                <Button Command="{Binding EditUserPermissionCommand}" CommandParameter="{Binding ElementName=userPermissionsList, Path=SelectedItem}" Margin="5">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="pack://application:,,,/Resources;component/Icons/Edit_48x48.ico" Stretch="Uniform" Height="24" Width="24"/>
+                        <TextBlock Text="Редактировать право" Margin="5" TextWrapping="Wrap" Width="104"/>
+                    </StackPanel>
+                </Button>
+                <Button Command="{Binding RemoveUserPermissionCommand}" CommandParameter="{Binding ElementName=userPermissionsList, Path=SelectedItem}" Margin="5">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="pack://application:,,,/Resources;component/Images/DB_refresh_24x24.png" Stretch="Uniform" Height="24" Width="24"/>
+                        <TextBlock Text="Удалить право" Margin="5" TextWrapping="Wrap" Width="108"/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+        </Border>
+    </Grid>
+
+</Window>
