Fixes #25, fixes #23, fixes #8
- Assignment are now can be canceled and deleted (temporary ones)
- Logger now does real work
-  Current datetime can be now recieved from server

--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -10,8 +10,8 @@
                 <ResourceDictionary Source="View/ScheduleView.xaml" />
                 <ResourceDictionary Source="View/TimeTickerView.xaml" />
                 <ResourceDictionary Source="View/RoomView.xaml" />
-                <ResourceDictionary Source="View/ScheduledAssignmentView.xaml" />
-                <ResourceDictionary Source="View/ScheduleCellView.xaml" />
+                <ResourceDictionary Source="View/FreeTimeSlotView.xaml" />
+                <ResourceDictionary Source="View/OccupiedTimeSlotView.xaml" />
                 <ResourceDictionary Source="View/ScheduleAssignmentUpdateView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
