--- a/Registry/View/OccupiedTimeSlotView.xaml
+++ b/Registry/View/OccupiedTimeSlotView.xaml
@@ -2,20 +2,20 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
                     xmlns:core="clr-namespace:Core;assembly=StuffLib">
-    <DataTemplate DataType="{x:Type registry:ScheduledAssignmentViewModel}">
+    <DataTemplate DataType="{x:Type registry:OccupiedTimeSlotViewModel}">
         <DataTemplate.Resources>
             <core:UniversalConverter x:Key="StateToBackgroundConverter">
-                <core:ConverterItem From="{x:Static registry:ScheduledAssignmentViewModelState.Completed}">
+                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Completed}">
                   <core:ConverterItem.To>
                         <SolidColorBrush Color="LightGreen" />
                     </core:ConverterItem.To>
                 </core:ConverterItem>
-                <core:ConverterItem From="{x:Static registry:ScheduledAssignmentViewModelState.Uncompleted}">
+                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Uncompleted}">
                     <core:ConverterItem.To>
                         <SolidColorBrush Color="Khaki" />
                     </core:ConverterItem.To>
                 </core:ConverterItem>
-                <core:ConverterItem From="{x:Static registry:ScheduledAssignmentViewModelState.Temporary}">
+                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Temporary}">
                     <core:ConverterItem.To>
                         <SolidColorBrush Color="Gainsboro" />
                     </core:ConverterItem.To>
@@ -29,13 +29,13 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2 2 0 0" FontSize="8" Text="{Binding StartTime, StringFormat='HH:mm'}" />
-                <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName}" />
-                <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm'}" />
+                <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="2 2 0 0" FontSize="8" Text="{Binding StartTime, StringFormat='HH:mm', Mode=OneTime}" />
+                <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName, Mode=OneTime}" />
+                <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm', Mode=OneTime}" />
             </Grid>
             <Border.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Cancel" />
+                    <MenuItem Header="{Binding CancelOrDeleteActionName}" Command="{Binding CancelOrDeleteCommand, Mode=OneTime}" />
                 </ContextMenu>
             </Border.ContextMenu>
         </Border>
