--- a/Registry/View/RoomView.xaml
+++ b/Registry/View/RoomView.xaml
@@ -6,60 +6,56 @@
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
     <DataTemplate DataType="{x:Type registry:RoomViewModel}">
         <DataTemplate.Resources>
-            <ControlTemplate x:Key="ListBoxItem"  TargetType="{x:Type ListBoxItem}">
-                <ContentPresenter />
-            </ControlTemplate>
-            <Style TargetType="{x:Type ListBox}">
+            <Style TargetType="{x:Type ItemsControl}">
                 <Setter Property="Width" Value="200" />
                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                 <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="BorderThickness" Value="0.5" />
+                <Setter Property="BorderBrush" Value="Gray" />
             </Style>
         </DataTemplate.Resources>
         <Grid>
             <!--Working time layer-->
-            <ListBox ItemsSource="{Binding WorkingTimes}" Background="Gray" IsHitTestVisible="False">
+            <ItemsControl ItemsSource="{Binding WorkingTimes}" Background="Gray" IsHitTestVisible="False">
                 <i:Interaction.Behaviors>
                     <core:IgnoreMouseWheelBehavior />
                 </i:Interaction.Behaviors>
-                <ListBox.ItemsPanel>
+                <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
                                                         UnitSize="{x:Static core:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static core:Configuration.ScheduleUnitTimeInterval}"/>
                     </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}">
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style>
                         <Setter Property="xctk:TimelinePanel.Date" Value="{Binding StartTime, Mode=OneTime}" />
                         <Setter Property="xctk:TimelinePanel.DateEnd" Value="{Binding EndTime, Mode=OneTime}" />
-                        <Setter Property="Template" Value="{StaticResource ListBoxItem}" />
                     </Style>
-                </ListBox.ItemContainerStyle>
-                <ListBox.ItemTemplate>
+                </ItemsControl.ItemContainerStyle>
+                <ItemsControl.ItemTemplate>
                     <DataTemplate DataType="{x:Type registry:ScheduleItemViewModel}">
                         <Rectangle Fill="White" />
                     </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
             <!--Assignments layer-->
-            <ListBox ItemsSource="{Binding TimeSlots}" BorderThickness="0">
+            <ItemsControl ItemsSource="{Binding TimeSlots}">
                 <i:Interaction.Behaviors>
                     <core:IgnoreMouseWheelBehavior />
                 </i:Interaction.Behaviors>
-                <ListBox.ItemsPanel>
+                <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
-                                                        UnitSize="{x:Static core:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static core:Configuration.ScheduleUnitTimeInterval}"/>
+                                                        UnitSize="{x:Static core:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static core:Configuration.ScheduleUnitTimeInterval}" />
                     </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}">
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style>
                         <Setter Property="xctk:TimelinePanel.Date" Value="{Binding StartTime, Mode=OneTime}" />
                         <Setter Property="xctk:TimelinePanel.DateEnd" Value="{Binding EndTime, Mode=OneTime}" />
-                        <Setter Property="Template" Value="{StaticResource ListBoxItem}" />
                     </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
+                </ItemsControl.ItemContainerStyle>
+            </ItemsControl>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
