--- a/Registry/View/OccupiedTimeSlotView.xaml
+++ b/Registry/View/OccupiedTimeSlotView.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <DataTemplate DataType="{x:Type registry:OccupiedTimeSlotViewModel}">
         <DataTemplate.Resources>
             <core:UniversalConverter x:Key="StateToBackgroundConverter">
@@ -20,9 +21,29 @@
                         <SolidColorBrush Color="Gainsboro" />
                     </core:ConverterItem.To>
                 </core:ConverterItem>
+                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.IsBeingMoved}">
+                    <core:ConverterItem.To>
+                        <SolidColorBrush Color="LightSteelBlue" />
+                    </core:ConverterItem.To>
+                </core:ConverterItem>
+            </core:UniversalConverter>
+            <core:UniversalConverter x:Key="ModeToContextMenuConverter" DefaultValue="{x:Null}">
+                <core:ConverterItem>
+                    <core:ConverterItem.From>
+                        <system:Boolean>False</system:Boolean>
+                    </core:ConverterItem.From>
+                    <core:ConverterItem.To>
+                        <ContextMenu>
+                            <MenuItem Header="{Binding CancelOrDeleteActionName}" Command="{Binding CancelOrDeleteCommand}" />
+                            <MenuItem Header="Обновить информацию" Command="{Binding UpdateCommand}" />
+                            <MenuItem Header="Перенести назначение" Command="{Binding MoveCommand}" />
+                        </ContextMenu>
+                    </core:ConverterItem.To>
+                </core:ConverterItem>
             </core:UniversalConverter>
         </DataTemplate.Resources>
-        <Border BorderBrush="Gray" BorderThickness="0 0.5 0 0.5" Background="{Binding State, Converter={StaticResource StateToBackgroundConverter}}">
+        <Border BorderBrush="Gray" BorderThickness="0 0.5 0 0.5" Background="{Binding State, Converter={StaticResource StateToBackgroundConverter}}"
+                ContextMenu="{Binding IsInReadOnlyMode, Converter={StaticResource ModeToContextMenuConverter}}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -33,11 +54,6 @@
                 <TextBlock Grid.Row="1" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2 2 0 0" FontWeight="SemiBold" Text="{Binding PersonShortName, Mode=OneTime}" />
                 <TextBlock Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 2 2" FontSize="8" Text="{Binding EndTime, StringFormat='HH:mm', Mode=OneTime}" />
             </Grid>
-            <Border.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="{Binding CancelOrDeleteActionName}" Command="{Binding CancelOrDeleteCommand, Mode=OneTime}" />
-                </ContextMenu>
-            </Border.ContextMenu>
         </Border>
     </DataTemplate>
 </ResourceDictionary>
