#6 - Preparing structure for schedule editor

--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="View/FreeTimeSlotView.xaml" />
                 <ResourceDictionary Source="View/OccupiedTimeSlotView.xaml" />
                 <ResourceDictionary Source="View/ScheduleAssignmentUpdateView.xaml" />
+                <ResourceDictionary Source="View/ScheduleEditorView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
                 <Grid>
